--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: X_Star服务器帮助文档
+description: X_Star服务器帮助文档
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://docs.tbedu.top
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
