--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
-title: X_Star服务器帮助文档
+title: X_Star
 description: X_Star服务器帮助文档
 theme: just-the-docs
 
 url: https://docs.tbedu.top
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  TBBBS: https://www.tbedu.top
+  TBSkin: https://skin.tbedu.top
