--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,58 @@
 title: X_Star
 description: X_Star服务器帮助文档
 theme: just-the-docs
+repository: TBedu/X_Star-Server-Docs
 
 url: https://docs.tbedu.top
+
+enable_copy_code_button: true
 
 aux_links:
   TBBBS: https://www.tbedu.top
   TBSkin: https://skin.tbedu.top
+
+aux_links_new_tab: true
+
+exclude:
+ # from https://github.com/jekyll/jekyll/blob/master/lib/site_template/_config.yml:
+   - .sass-cache/
+   - .jekyll-cache/
+   - gemfiles/
+   - Gemfile
+   - Gemfile.lock
+   - node_modules/
+   - vendor/bundle/
+   - vendor/cache/
+   - vendor/gems/
+   - vendor/ruby/
+ # specific to the theme website:
+   - bin/
+   - lib/
+   - "*.gemspec"
+   - "*.gem"
+   - LICENSE.txt
+   - package.json
+   - package-lock.json
+   - Rakefile
+   - README.md
+   - CODE_OF_CONDUCT.md
+   - docker-compose.yml
+   - Dockerfile
+ # theme test code
+   - fixtures/
+
+footer_content: "<b>版权所有 &copy; 2024 <a href="https://docs.tbedu.top">X_Star Docs</a>。</b> 保留所有权利。<a href="https://ipw.cn/ipv6webcheck/?site=docs.tbedu.top" title="本站支持IPv6访问" target='_blank'><img style='display:inline-block;vertical-align:middle' alt="本站支持IPv6访问" src="https://static.ipw.cn/icon/ipv6-s1.svg"></a><a href="https://ipw.cn/ssl/?site=docs.tbedu.top" title="本站支持SSL安全访问" target='_blank'><img style='display:inline-block;vertical-align:middle' alt="本站支持SSL安全访问" src="https://static.ipw.cn/icon/ssl-s1.svg"></a>"
+
+back_to_top: true
+back_to_top_text: "返回页首"
+
+# Footer "Edit this page on GitHub" link text
+gh_edit_link: true # show or hide edit this page link
+gh_edit_link_text: "在 Github 上编辑此页"
+gh_edit_repository: "https://github.com/TBedu/X_Star-Server-Docs" # the github URL for your repo
+gh_edit_branch: "main" # the branch that your docs is served from
+# gh_edit_source: docs # the source that your files originate from
+gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
+
+# Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
+color_scheme: nil
