--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ aux_links:
 
 aux_links_new_tab: true
 
-footer_content: "<b>版权所有 &copy; 2024 <a href=https://docs.tbedu.top>X_Star Docs</a>。</b> 保留所有权利。<a href="https://ipw.cn/ipv6webcheck/?site=docs.tbedu.top" title="本站支持IPv6访问" target='_blank'><img style='display:inline-block;vertical-align:middle' alt="本站支持IPv6访问" src="https://static.ipw.cn/icon/ipv6-s1.svg"></a><a href="https://ipw.cn/ssl/?site=docs.tbedu.top" title="本站支持SSL安全访问" target='_blank'><img style='display:inline-block;vertical-align:middle' alt="本站支持SSL安全访问" src="https://static.ipw.cn/icon/ssl-s1.svg"></a>"
+footer_content: "<b>版权所有 &copy; 2024 <a href="https://docs.tbedu.top">X_Star Docs</a>。</b> 保留所有权利。"
 
 back_to_top: true
 back_to_top_text: "返回页首"
