--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ aux_links:
 
 aux_links_new_tab: true
 
-footer_content: "<b>版权所有 &copy; 2024 <a href="https://docs.tbedu.top">X_Star Docs</a>。</b> 保留所有权利。"
+footer_content: "<b>Copyright &copy; 2024 <a href="https://docs.tbedu.top">X_Star Docs</a>.</b> All rights reserved."
 
 back_to_top: true
 back_to_top_text: "返回页首"
